# rUBot_gopigo_ws

./: README.md  map_stage_2.pgm  map_stage_2.yaml  read2.md
Documentation/: 0_gopigo.markdown  0_gopigo_setup.md  1_gopigo_model&control.ipynb  1_gopigo_model&control.md  1_gopigo_model&control1.md  1_gopigo_model&navigation.ipynb  1_gopigo_model.ipynb  2_gopigo_SLAM&navigation.md  2_gopigo_rbpi.ipynb  2_gopigo_rbpi_control.ipynb  2_gopigo_rbpi_control.md  3_gopigo_SLAM&navigation.ipynb  3_gopigo_SLAM&navigation.md  3_gopigo_navigation&SLAM.ipynb  3_gopigo_projects.md  4_gopigo_rbpi_slam&navigation.ipynb  4_gopigo_rbpi_slam&navigation.md  4_gopigo_rbpi_slam.ipynb  5_gopigo_opencv.ipynb  5_gopigo_projects.ipynb  5_gopigo_projects.md  5_gopigo_vision_projects.ipynb  5_gopigo_vision_projects.md  6_gopigo_rbpi_projects.md  6_gopigo_rbpi_vision_projects.ipynb  6_gopigo_rbpi_vision_projects.md  6_gopigo_vision_project.ipynb  7_ObjectRecognition.md  RBPi_Nav_SLAM_Install
Documentation/Images/: 1_lidar.pptx  6_projects.pptx  gopigo_figures.pptx
devel/: .catkin  .rosinstall  setup.sh
src/gopigo3_control/: CMakeLists.txt  package.xml
src/gopigo3_projects/: CMakeLists.txt  package.xml
src/gopigo3_slam/: CMakeLists.txt  package.xml
src/nexus_mecanum/: CMakeLists.txt  package.xml
src/rbpi/gopigo_slam/: package.xml
src/rbpi/gopigo_slam/launch/: gmapping.launch  gopigo3_slam.launch  gopigo3_world_stl.launch  move_base.launch
src/rbpi/gopigo_slam/maps/: lab_n14l.pgm
src/rubot_control/: CMakeLists.txt  package.xml
src/vision/: package.xml
src_rbpi3/: rbpi.rar
(+344 files in other folders)
