<?xml version="1.0"?>
<package format="2">
  <name>gopigo_slam</name>
  <version>0.0.1</version>
  <description>SLAM and Navigation for GoPiGo3 in Gazebo</description>

  <maintainer email="brjapon@therobotacademy.com">Bernardo Ronquillo Japon</maintainer>

  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>

</package>
